[package]
name = "inspection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda-web = { version = "0.2.0", features = ["rocket05"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_mysql"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"
tracing = { version = "0.1.35", features = ["log"] }
tracing-subscriber = { version = "0.3.14", default-features = false, features = ["fmt"] }
